--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "source": "https://central.hoa-project.net/Resource/Library/Mime"
     },
     "require": {
-        "php"            : ">=5.5.0",
+        "php"            : ">=7.1",
         "hoa/consistency": "~1.0",
         "hoa/exception"  : "~1.0",
         "hoa/protocol"   : "~1.0",
@@ -36,7 +36,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Hoa\\Mime\\": "."
+            "Hoa\\Mime\\"      : "Source",
+            "Hoa\\Mime\\Test\\": "Test"
         }
     },
     "extra": {
